test/classes/delete-free/error-owned-record-in-operator.good
error-owned-record-in-operator.chpl:8: In function '<=>':
error-owned-record-in-operator.chpl:8: error: cannot use non-class type 'R' with memory management specifiers
